Updated POM to include argLine
Updated POM to include argLine