@@ -42,6 +42,8 @@
 					<forkMode>perthread</forkMode>
 					<reuseForks>true</reuseForks>
 					<threadCount>2</threadCount>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
 					<includes>
 						<include>**/*Runner.java</include>
 					</includes>
